--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: notes
-description: My Notes App.,
+description: Notes App,
 
 publish_to: 'none'
 
@@ -32,14 +32,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   sqflite_common_ffi: ^2.0.0
-  #  test_api: ^0.3.0
-  #  change_app_package_name: ^1.0.0
-  #  flutter_native_splash: ^1.1.7+1
-  #  flutter_launcher_icons: ^0.9.0
-#  integration_test: ^1.0.2+2
-#  mockito: any
-#  test: any
-#  build_runner: any
+#  change_app_package_name: ^1.0.0
 
 flutter:
   uses-material-design: true
