--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
 
     <application
             android:label="Notes"
-            android:icon="@mipmap/ic_launcher">
+            android:icon="@mipmap/ic_launcher"
+            android:allowBackup="false">
         <activity
                 android:name=".MainActivity"
                 android:launchMode="singleTask"
