--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,17 @@
 name: notes
-description: Notes App,
+description: Keep Notes,
 
 publish_to: 'none'
 
-version: 0.0.2+2
+version: 0.0.2+3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
 
   file_picker: ^3.0.1
