--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
   flutter_slidable: ^0.6.0
   flutter_tabler_icons: ^1.0.3-rc.1
   intl: ^0.17.0
-  local_auth: ^1.1.4
-  permission_handler: ^6.1.1
+  local_auth: ^1.1.5
+  permission_handler: ^7.0.0
   provider: ^5.0.0
   shared_preferences: ^2.0.5
   sqflite: ^2.0.0+3
@@ -32,6 +32,7 @@ dev_dependencies:
     sdk: flutter
   sqflite_common_ffi: ^2.0.0
   pedantic: ^1.11.0
+  dependency_validator: ^3.1.0
 
 #  change_app_package_name: ^1.0.0
 
