--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -47,10 +47,24 @@ android {
 
     defaultConfig {
         applicationId "com.nikhil.flutter.notes"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion 22
+        targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        resValue "string", "app_name", "KeepNotes"
+    }
+   /*
+
+
+*/
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+    compileOptions {
+
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+        encoding 'utf-8'
     }
 
     signingConfigs {
@@ -77,6 +91,9 @@ android {
                     signingConfig signingConfigs.release
                 }
             }
+           /* ndk {
+                abiFilters 'armeabi-v7a', 'arm64-v8a'
+            }*/
 
             /*applicationVariants.all { variant ->
                 variant.outputs.all { output ->
@@ -88,11 +105,13 @@ android {
         debug {
             applicationIdSuffix ".dev"
             signingConfig signingConfigs.release
+            resValue "string", "app_name", "KeepDebug"
         }
 
         profile {
             applicationIdSuffix ".profile"
             signingConfig signingConfigs.release
+            resValue "string", "app_name", "KeepProfile"
         }
     }
 }
