--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_tabler_icons: ^1.1.1
   intl: ^0.17.0
   local_auth: ^1.1.6
-  permission_handler: ^8.0.0+2
+  permission_handler: ^8.0.1
   provider: ^5.0.0
   shared_preferences: ^2.0.6
   sqflite: ^2.0.0+3
@@ -27,15 +27,10 @@ dependencies:
   encrypt: ^5.0.0
   flutter_secure_storage: ^4.2.0
   syncfusion_flutter_pdf: ^19.1.66-beta
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  sqflite_common_ffi: ^2.0.0
   pedantic: ^1.11.0
-  dependency_validator: ^3.1.0
-
-#  change_app_package_name: ^1.0.0
 
 flutter:
   uses-material-design: true
