--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,14 +19,26 @@ dependencies:
   flutter_tabler_icons: ^1.1.1
   intl: ^0.17.0
   local_auth: ^1.1.6
-  permission_handler: ^8.0.1
+  permission_handler: ^8.1.1
   provider: ^5.0.0
   shared_preferences: ^2.0.6
   sqflite: ^2.0.0+3
   url_launcher: ^6.0.6
   encrypt: ^5.0.0
   flutter_secure_storage: ^4.2.0
-  syncfusion_flutter_pdf: ^19.1.67-beta
+  syncfusion_flutter_pdf: ^19.1.69-beta
+  firebase_core: ^1.3.0
+  google_sign_in: ^5.0.4
+  firebase_auth: ^1.4.1
+  cloud_firestore: ^2.2.2
+  wc_form_validators: ^1.0.0
+  flutter_keyboard_visibility: ^5.0.2
+  flutter_svg: ^0.22.0
+  sentry_flutter: ^5.1.0
+  logger: ^1.0.0
+  uuid: ^3.0.4
+  flutter_spinkit: ^5.0.0
+  internet_connection_checker: ^0.0.1+1
   keepsettings:
     git:
       url: https://github.com/ProblematicDude/keepsettings.git
