--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,12 @@ dependencies:
 
   cloud_firestore: ^3.1.0
   encrypt: ^5.0.1
-  file_picker: ^4.2.2+1
+  file_picker: ^4.2.3
   firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
   flutter_keyboard_visibility: ^5.1.0
-  flutter_secure_storage: ^5.0.0
-  flutter_slidable: ^1.0.0
+  flutter_secure_storage: ^5.0.2
+  flutter_slidable: ^1.1.0
   flutter_spinkit: ^5.1.0
   flutter_svg: ^0.23.0+1
   flutter_tabler_icons: ^1.1.1
@@ -30,15 +30,17 @@ dependencies:
   intl: ^0.17.0
   local_auth: ^1.1.8
   logger: ^1.1.0
-  permission_handler: ^8.2.6
+  permission_handler: ^8.3.0
+  path: ^1.8.0
   provider: ^6.0.1
-  sentry_flutter: ^6.1.1
+  sentry_flutter: ^6.1.2
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+4
   syncfusion_flutter_pdf: ^19.3.53-beta
-  url_launcher: ^6.0.12
+  url_launcher: ^6.0.13
   uuid: ^3.0.5
   wc_form_validators: ^1.0.0
+
   keepsettings:
     git:
       url: https://github.com/ProblematicDude/keepsettings.git
