--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_slidable: ^1.1.0
   flutter_spinkit: ^5.1.0
   flutter_svg: ^0.23.0+1
+  flutter_svg_provider: ^0.1.11
   flutter_tabler_icons: ^1.1.1
   google_sign_in: ^5.2.1
   internet_connection_checker: ^0.0.1+3
@@ -36,7 +37,7 @@ dependencies:
   sentry_flutter: ^6.1.2
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+4
-  syncfusion_flutter_pdf: ^19.3.53-beta
+  syncfusion_flutter_pdf: ^19.3.54-beta
   url_launcher: ^6.0.13
   uuid: ^3.0.5
   wc_form_validators: ^1.0.0
