--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,55 +1,25 @@
-# Specify analysis options.
-#
-# Until there are meta linter rules, each desired lint must be explicitly enabled.
-# See: https://github.com/dart-lang/linter/issues/288
-#
-# For a list of lints, see: http://dart-lang.github.io/linter/lints/
-# See the configuration guide for more
-# https://github.com/dart-lang/sdk/tree/main/pkg/analyzer#configuring-the-analyzer
-#
-# There are other similar analysis options files in the flutter repos,
-# which should be kept in sync with this file:
-#
-#   - analysis_options.yaml (this file)
-#   - https://github.com/flutter/plugins/blob/master/analysis_options.yaml
-#   - https://github.com/flutter/engine/blob/master/analysis_options.yaml
-#   - https://github.com/flutter/packages/blob/master/analysis_options.yaml
-#
-# This file contains the analysis options used by Flutter tools, such as IntelliJ,
-# Android Studio, and the `flutter analyze` command.
+include: package:flutter_lints/flutter.yaml
 
 analyzer:
   strong-mode:
     implicit-casts: true
     implicit-dynamic: true
   errors:
-    # treat missing required parameters as a warning (not a hint)
-    missing_required_param: warning
-    # treat missing returns as a warning (not a hint)
-    missing_return: warning
-    # allow having TODO comments in the code
+    missing_required_param: error
+    missing_return: error
     todo: ignore
-    # allow self-reference to deprecated members (we do this because otherwise we have
-    # to annotate every member in every test, assert, etc, when we deprecate something)
-    deprecated_member_use_from_same_package: ignore
-    # TODO(ianh): https://github.com/flutter/flutter/issues/74381
-    # Clean up existing unnecessary imports, and remove line to ignore.
-    unnecessary_import: ignore
-    # Turned off until null-safe rollout is complete.
-    unnecessary_null_comparison: ignore
+    deprecated_member_use_from_same_package: error
+    unnecessary_import: error
+    unnecessary_null_comparison: error
   exclude:
     - "bin/cache/**"
-    # Ignore protoc generated files
     - "dev/conductor/lib/proto/*"
 
 linter:
   rules:
-    # these rules are documented on and in the same order as
-    # the Dart Lint rules page to make maintenance easier
-    # https://github.com/dart-lang/linter/blob/master/example/all.yaml
     - always_declare_return_types
     - always_put_control_body_on_new_line
-    # - always_put_required_named_parameters_first # we prefer having parameters in the same order as fields https://github.com/flutter/flutter/issues/10219
+#    - always_put_required_named_parameters_first # we prefer having parameters in the same order as fields https://github.com/flutter/flutter/issues/10219
     - always_require_non_null_named_parameters
 #    - always_specify_types
     - always_use_package_imports # we do this commonly
@@ -69,11 +39,11 @@ linter:
     - avoid_implementing_value_types
     - avoid_init_to_null
     - avoid_js_rounded_ints
-    # - avoid_multiple_declarations_per_line # seems to be a stylistic choice we don't subscribe to
+    - avoid_multiple_declarations_per_line # seems to be a stylistic choice we don't subscribe to
     - avoid_null_checks_in_equality_operators
     # - avoid_positional_boolean_parameters # would have been nice to enable this but by now there's too many places that break it
     - avoid_print
-    # - avoid_private_typedef_functions # we prefer having typedef (discussion in https://github.com/flutter/flutter/pull/16356)
+    - avoid_private_typedef_functions # we prefer having typedef (discussion in https://github.com/flutter/flutter/pull/16356)
     - avoid_redundant_argument_values
     - avoid_relative_lib_imports
     - avoid_renaming_method_parameters
@@ -92,16 +62,16 @@ linter:
     - avoid_unnecessary_containers
     - avoid_unused_constructor_parameters
     - avoid_void_async
-    # - avoid_web_libraries_in_flutter # we use web libraries in web-specific code, and our tests prevent us from using them elsewhere
+    - avoid_web_libraries_in_flutter # we use web libraries in web-specific code, and our tests prevent us from using them elsewhere
     - await_only_futures
     - camel_case_extensions
     - camel_case_types
     - cancel_subscriptions
-    # - cascade_invocations # doesn't match the typical style of this repo
+    - cascade_invocations # doesn't match the typical style of this repo
     - cast_nullable_to_non_nullable
-    # - close_sinks # not reliable enough
+    - close_sinks # not reliable enough
     # - comment_references # blocked on https://github.com/dart-lang/linter/issues/1142
-    # - constant_identifier_names # needs an opt-out https://github.com/dart-lang/linter/issues/204
+    - constant_identifier_names # needs an opt-out https://github.com/dart-lang/linter/issues/204
     - control_flow_in_finally
     # - curly_braces_in_flow_control_structures # not required by flutter style
     - depend_on_referenced_packages
@@ -133,22 +103,22 @@ linter:
 #    - no_default_cases
     - no_duplicate_case_values
     - no_logic_in_create_state
-    # - no_runtimeType_toString # ok in tests; we enable this only in packages/
+    - no_runtimeType_toString # ok in tests; we enable this only in packages/
     - non_constant_identifier_names
     - noop_primitive_operations
     - null_check_on_nullable_type_parameter
     - null_closures
-    # - omit_local_variable_types # opposite of always_specify_types
+    - omit_local_variable_types # opposite of always_specify_types
     # - one_member_abstracts # too many false positives
     - only_throw_errors # this does get disabled in a few places where we have legacy code that uses strings et al
     - overridden_fields
     - package_api_docs
     - package_names
     - package_prefixed_library_names
-    # - parameter_assignments # we do this commonly
+    - parameter_assignments # we do this commonly
     - prefer_adjacent_string_concatenation
     - prefer_asserts_in_initializer_lists
-    # - prefer_asserts_with_message # not required by flutter style
+    - prefer_asserts_with_message # not required by flutter style
     - prefer_collection_literals
     - prefer_conditional_assignment
     - prefer_const_constructors
@@ -163,7 +133,7 @@ linter:
     - prefer_final_fields
     - prefer_final_in_for_each
     - prefer_final_locals
-    # - prefer_final_parameters # we should enable this one day (see also parameter_assignments)
+    - prefer_final_parameters # we should enable this one day (see also parameter_assignments)
     - prefer_for_elements_to_map_fromIterable
     - prefer_foreach
     - prefer_function_declarations_over_variables
@@ -180,7 +150,7 @@ linter:
     - prefer_iterable_whereType
     # - prefer_mixin # Has false positives, see https://github.com/dart-lang/linter/issues/3018
     - prefer_null_aware_operators
-    # - prefer_null_aware_method_calls # "call()" is confusing to people new to the language since it's not documented anywhere
+    - prefer_null_aware_method_calls # "call()" is confusing to people new to the language since it's not documented anywhere
 #    - prefer_relative_imports
     - prefer_single_quotes
     - prefer_spread_collections
@@ -201,7 +171,7 @@ linter:
     - tighten_type_of_initializing_formals
     # - type_annotate_public_apis # subset of always_specify_types
     - type_init_formals
-    # - unawaited_futures # too many false positives, especially with the way AnimationController works
+    - unawaited_futures # too many false positives, especially with the way AnimationController works
     - unnecessary_await_in_return
     - unnecessary_brace_in_string_interps
     - unnecessary_const
@@ -233,7 +203,7 @@ linter:
     - use_raw_strings
     - use_rethrow_when_possible
     - use_setters_to_change_properties
-    # - use_string_buffers # has false positives: https://github.com/dart-lang/sdk/issues/34182
+    - use_string_buffers # has false positives: https://github.com/dart-lang/sdk/issues/34182
     - use_test_throws_matchers
     # - use_to_and_as_if_applicable # has false positives, so we prefer to catch this by code-review
     - valid_regexps
