--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
 
   cloud_firestore: ^3.1.0
   encrypt: ^5.0.1
-  file_picker: ^4.2.3
   firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
   flutter_keyboard_visibility: ^5.1.0
@@ -24,14 +23,11 @@ dependencies:
   flutter_slidable: ^1.1.0
   flutter_spinkit: ^5.1.0
   flutter_svg: ^0.23.0+1
-  flutter_svg_provider: ^0.1.11
   flutter_tabler_icons: ^1.1.1
   google_sign_in: ^5.2.1
-  internet_connection_checker: ^0.0.1+3
   intl: ^0.17.0
   local_auth: ^1.1.8
   logger: ^1.1.0
-  permission_handler: ^8.3.0
   path: ^1.8.0
   provider: ^6.0.1
   sentry_flutter: ^6.1.2
@@ -49,6 +45,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   lints: ^1.0.1
+  flutter_lints: ^1.0.4
 
 flutter:
   uses-material-design: true
