--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-
+  #Firebase
   firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
-  firebase_storage: ^10.1.0
   cloud_firestore: ^3.1.0
-
-
-
 
   encrypt: ^5.0.1
   flutter_keyboard_visibility: ^5.1.0
