--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -19,16 +19,16 @@ linter:
   rules:
     - always_declare_return_types
     - always_put_control_body_on_new_line
-#    - always_put_required_named_parameters_first # we prefer having parameters in the same order as fields https://github.com/flutter/flutter/issues/10219
+    - always_put_required_named_parameters_first # we prefer having parameters in the same order as fields https://github.com/flutter/flutter/issues/10219
     - always_require_non_null_named_parameters
-#    - always_specify_types
+    #    - always_specify_types
     - always_use_package_imports # we do this commonly
     - annotate_overrides
     # - avoid_annotating_with_dynamic # conflicts with always_specify_types
     - avoid_bool_literals_in_conditional_expressions
     # - avoid_catches_without_on_clauses # blocked on https://github.com/dart-lang/linter/issues/3023
     # - avoid_catching_errors # blocked on https://github.com/dart-lang/linter/issues/3023
-#    - avoid_classes_with_only_static_members
+    #    - avoid_classes_with_only_static_members
     - avoid_double_and_int_checks
 #    - avoid_dynamic_calls
     - avoid_empty_else
