--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cloud_firestore: ^3.1.0
 
   encrypt: ^5.0.1
+  file_picker: ^4.2.4
   flutter_keyboard_visibility: ^5.1.0
   flutter_secure_storage: ^5.0.2
   flutter_slidable: ^1.1.0
@@ -32,6 +33,7 @@ dependencies:
   logger: ^1.1.0
   path: ^1.8.0
   provider: ^6.0.1
+  permission_handler: ^8.3.0
   sentry_flutter: ^6.1.2
   shared_preferences: ^2.0.9
   sqflite: ^2.0.0+4
