--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ dependencies:
   file_picker: ^4.2.4
   flutter_keyboard_visibility: ^5.1.0
   flutter_secure_storage: ^5.0.2
-  flutter_slidable: ^1.1.0
   flutter_spinkit: ^5.1.0
   flutter_svg: ^0.23.0+1
   flutter_tabler_icons: ^1.1.1
@@ -43,9 +42,13 @@ dependencies:
   wc_form_validators: ^1.0.0
   pinput: ^1.2.2
 
+
+  flutter_slidable:
+    git:
+      url: https://github.com/nikhilbadyal/flutter_slidable.git
   keepsettings:
     git:
-      url: https://github.com/ProblematicDude/keepsettings.git
+      url: https://github.com/nikhilbadyal/keepsettings.git
 dev_dependencies:
   flutter_test:
     sdk: flutter
