--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,14 @@ dependencies:
     sdk: flutter
 
   #Firebase
-  firebase_auth: ^3.2.0
-  firebase_core: ^1.10.0
-  cloud_firestore: ^3.1.0
+  firebase_auth: ^3.3.0
+  firebase_core: ^1.10.2
+  cloud_firestore: ^3.1.1
 
   encrypt: ^5.0.1
   file_picker: ^4.2.7
   flutter_spinkit: ^5.1.0
-  flutter_svg: ^0.23.0+1
+  flutter_svg: ^1.0.0
   flutter_tabler_icons: ^1.1.1
   google_sign_in: ^5.2.1
   intl: ^0.17.0
