--- a/.gitignore
+++ b/.gitignore
@@ -116,5 +116,6 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
-/lib/sentryDsn.dart
+/lib/sentry_dsn.dart
 /imp
+/android/app/google-services.json
