--- a/android/app/src/profile/AndroidManifest.xml
+++ b/android/app/src/profile/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nikhil.flutter.colorgen">
-    <!-- Flutter needs it to communicate with the running application
-         to allow setting breakpoints, to provide hot reload, etc.
-    -->
+    package="com.nikhil.flutter.notes">
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <application android:label="@string/app_name" />
 </manifest>
