--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   firebase_auth: ^3.3.0
   firebase_core: ^1.10.2
   cloud_firestore: ^3.1.1
-
+  flutter_colorpicker: ^1.0.2
   encrypt: ^5.0.1
   file_picker: ^4.2.7
   flutter_spinkit: ^5.1.0
@@ -33,7 +33,7 @@ dependencies:
   permission_handler: ^8.3.0
   sentry_flutter: ^6.1.2
   shared_preferences: ^2.0.9
-  sqflite: ^2.0.0+4
+  sqflite: ^2.0.1
   url_launcher: ^6.0.17
   uuid: ^3.0.5
   wc_form_validators: ^1.0.0
