--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ publish_to: 'none'
 
 version: 0.0.3+4
 
+
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
@@ -15,12 +16,15 @@ dependencies:
     sdk: flutter
 
   #Firebase
-  firebase_auth: ^3.3.0
-  firebase_core: ^1.10.2
-  cloud_firestore: ^3.1.1
-  flutter_colorpicker: ^1.0.2
+  animations: ^2.0.2
+  avatar_glow: ^2.0.2
+  firebase_auth: ^3.3.2
+  firebase_core: ^1.10.4
+  cloud_firestore: ^3.1.3
   encrypt: ^5.0.1
+  material_design_icons_flutter: ^5.0.6595
   file_picker: ^4.2.7
+  eva_icons_flutter: ^3.0.2
   flutter_spinkit: ^5.1.0
   flutter_svg: ^1.0.0
   flutter_tabler_icons: ^1.1.1
@@ -31,7 +35,7 @@ dependencies:
   path: ^1.8.0
   provider: ^6.0.1
   permission_handler: ^8.3.0
-  sentry_flutter: ^6.1.2
+  sentry_flutter: ^6.2.0
   shared_preferences: ^2.0.9
   sqflite: ^2.0.1
   url_launcher: ^6.0.17
@@ -48,12 +52,18 @@ dependencies:
   keepsettings:
     git:
       url: https://github.com/nikhilbadyal/keepsettings.git
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.4
   flutter_native_splash: ^1.3.2
   flutter_launcher_icons: ^0.9.2
+  flutter_colorpicker: ^1.0.2
+
+
 
 flutter:
   uses-material-design: true
