--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,6 +7,7 @@ if (localPropertiesFile.exists()) {
 }
 
 def appcompat_version = "1.4.0"
+def lottie_version = "4.2.2"
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
@@ -97,6 +98,7 @@ android {
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
             signingConfig signingConfigs.release
+
         }
 
         profile {
@@ -115,4 +117,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
+    implementation "com.airbnb.android:lottie-compose:$lottie_version"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.2"
 }
