--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,6 +20,7 @@ allprojects {
     }
     repositories {
         google()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 
