--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -208,3 +208,6 @@ linter:
     - use_to_and_as_if_applicable # has false positives, so we prefer to catch this by code-review
     - valid_regexps
     - void_checks
+    - avoid_returning_this
+    - unnecessary_lambdas
+    - lines_longer_than_80_chars
