--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nikhil.flutter.notes">
+    package="com.nikhil.flutter.keepnotes">
 
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
