--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,6 @@ on:
     paths-ignore:
       - '**/README.md'
   pull_request:
-    branches: [master]
-
   workflow_dispatch:
 
 jobs:
@@ -25,6 +23,18 @@ jobs:
           cache: true
           cache-key: flutter
           cache-path: ${{ runner.tool_cache }}/flutter
+            # Creating the key.properties file
+      - run: |
+          echo storePassword=\${{ secrets.STOREPASSWORD }} >> ${{env.PROPERTIES_PATH}}
+          echo keyPassword=\${{ secrets.KEYPASSWORD }} > ${{env.PROPERTIES_PATH}}
+          echo keyAlias=\${{ secrets.KEYALIAS }} >> ${{env.PROPERTIES_PATH}}
+          echo storeFile=\${{ secrets.STOREFILENAME }} >> ${{env.PROPERTIES_PATH}}
+      - run: |
+          echo "${{ secrets.STOREFILE }}" | base64 --decode > android/app/keepnotes.jks
+
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter build apk
+
+env:
+  PROPERTIES_PATH: "./android/key.properties"
