--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,13 @@ jobs:
           cache: true
           cache-key: flutter
           cache-path: ${{ runner.tool_cache }}/flutter
-            # Creating the key.properties file
+#      - run: |
+#          echo storePassword=\${{ secrets.STOREPASSWORD }} >> ${{env.PROPERTIES_PATH}}
+#          echo keyPassword=\${{ secrets.KEYPASSWORD }} > ${{env.PROPERTIES_PATH}}
+#          echo keyAlias=\${{ secrets.KEYALIAS }} >> ${{env.PROPERTIES_PATH}}
+#          echo storeFile=\${{ secrets.STOREFILENAME }} >> ${{env.PROPERTIES_PATH}}
       - run: |
-          echo storePassword=\${{ secrets.STOREPASSWORD }} >> ${{env.PROPERTIES_PATH}}
-          echo keyPassword=\${{ secrets.KEYPASSWORD }} > ${{env.PROPERTIES_PATH}}
-          echo keyAlias=\${{ secrets.KEYALIAS }} >> ${{env.PROPERTIES_PATH}}
-          echo storeFile=\${{ secrets.STOREFILENAME }} >> ${{env.PROPERTIES_PATH}}
+          echo "${{ secrets.LOCAL_PROPERTIES }}" | base64 --decode > android/key.properties
       - run: |
           echo "${{ secrets.STOREFILE }}" | base64 --decode > android/app/keepnotes.jks
 
