--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,9 @@ dependencies:
 
   animations: ^2.0.2
   avatar_glow: ^2.0.2
-  firebase_auth: ^3.3.10
-  firebase_core: ^1.13.1
-  cloud_firestore: ^3.1.10
+  firebase_auth: ^3.3.13
+  firebase_core: ^1.14.0
+  cloud_firestore: ^3.1.11
   encrypt: ^5.0.1
   material_design_icons_flutter: ^5.0.6595
   file_picker: ^4.5.1
@@ -30,13 +30,13 @@ dependencies:
   path: ^1.8.0
   provider: ^6.0.2
   permission_handler: ^9.2.0
-  sentry_flutter: ^6.3.0
+  sentry_flutter: ^6.4.0
   shared_preferences: ^2.0.13
   sqflite: ^2.0.2
   url_launcher: ^6.0.20
   uuid: ^3.0.6
   wc_form_validators: ^1.0.0
-  pinput: ^2.1.4
+  pinput: ^2.2.7
   progress_state_button: ^1.0.4
   google_fonts: ^2.3.1
   flutter_slidable:
@@ -48,7 +48,7 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^1.0.4
-  flutter_native_splash: ^2.1.0
+  flutter_native_splash: ^2.1.3+1
   flutter_launcher_icons: ^0.9.2
   flutter_colorpicker: ^1.0.3
 
