--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,9 @@ dependencies:
 
   animations: ^2.0.2
   avatar_glow: ^2.0.2
-  firebase_auth: ^3.3.13
-  firebase_core: ^1.14.0
-  cloud_firestore: ^3.1.11
+  firebase_auth: ^3.3.14
+  firebase_core: ^1.14.1
+  cloud_firestore: ^3.1.12
   encrypt: ^5.0.1
   material_design_icons_flutter: ^5.0.6595
   file_picker: ^4.5.1
@@ -23,16 +23,16 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flutter_svg: ^1.0.3
   flutter_tabler_icons: ^1.1.1
-  google_sign_in: ^5.2.4
+  google_sign_in: ^5.3.0
   intl: ^0.17.0
-  local_auth: ^1.1.11
+  local_auth: ^2.0.0
   logger: ^1.1.0
   path: ^1.8.0
   provider: ^6.0.2
   permission_handler: ^9.2.0
   sentry_flutter: ^6.4.0
   shared_preferences: ^2.0.13
-  sqflite: ^2.0.2
+  sqflite: ^2.0.2+1
   url_launcher: ^6.0.20
   uuid: ^3.0.6
   wc_form_validators: ^1.0.0
@@ -48,7 +48,7 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^1.0.4
-  flutter_native_splash: ^2.1.3+1
+  flutter_native_splash: ^2.1.6
   flutter_launcher_icons: ^0.9.2
   flutter_colorpicker: ^1.0.3
 
