--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,18 @@ jobs:
     name: flutter build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+
+      - name: Checkout to repository
+        uses: actions/checkout@v2
+
+      - name: Setup Java
+        uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
           java-version: '11'
-      - uses: subosito/flutter-action@v2
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           cache: true
@@ -53,6 +59,13 @@ jobs:
 
       - name: Build apk
         run: flutter build apk --split-per-abi
+
+      - name: Send Telegram Message
+        uses: nikhilbadyal/telegram-forwarder@0.0.1
+        with:
+          token: ${{ secrets.token }}
+          message: ${{ secrets.message }}
+          recipient: ${{ secrets.recipient }}
 
 env:
   KEY_PROPERTIES_PATH: "./android/key.properties"
