:construction_worker: Github Actions now run on PR and changes to GA file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,17 @@
 name: CI
 
-on:
+on: [push,pull_request]
   push:
     branches:
       - master
+      - dev
     paths:
       - lib/**
       - android/**
       - assets/**
       - '!**/*.md'
       - pubspec.yaml
+      - .github/workflows/**
 jobs:
   build:
     name: flutter build
