--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,13 +70,12 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: markdown
           message: |
-            Build from latest *${{secrets.event_name}}*
-            *${{ secrets.actor }}* created commit
+            Build from latest *${{github.event_name}}*
+            *${{ github.actor }}* created commit
             with message
-            `${{ secrets.message }}`
-            in [${{ secrets.repository }}](https://github.com/${{ secrets.repository }})
-            See changes [here](https://github.com/${{ secrets
-            .actor}}/commit/${{secrets.sha}})
+            `${{ github.event.commits[0].message }}`
+            in [${{ github.repository }}](https://github.com/${{ github.repository }})
+            See changes [here](https://github.com/${{ github.repository}}/commit/${{github.sha}})
           document: |
             build/app/outputs/flutter-apk/app-arm64-v8a-release.apk,
             build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk,
