--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -3,9 +3,9 @@ cli:
   version: 0.11.0-beta
 lint:
   enabled:
-    - actionlint@1.6.9
-    - gitleaks@8.3.0
-    - markdownlint@0.31.1
-    - prettier@2.5.1
+    - actionlint@1.6.12
+    - gitleaks@8.8.4
+    - markdownlint@0.47.0
     - shellcheck@0.8.0
-    - shfmt@3.4.0
+    - shfmt@3.5.0
+    - semgrep@0.92.0
