:pushpin: Added flutter_lints as ignore plugin in dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,7 @@ updates:
       interval: "daily"
   - package-ecosystem: "pub"
     directory: "/"
+    ignore:
+      - dependency-name: "flutter_lints"
     schedule:
       interval: "daily"
