--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^1.0.4
-  flutter_native_splash: ^2.1.6
+  flutter_native_splash: ^2.2.0+1
   flutter_launcher_icons: ^0.9.2
   flutter_colorpicker: ^1.0.3
 flutter:
