:construction_worker: CI now runs only on master branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
       - '!**/*.md'
       - pubspec.yaml
       - .github/workflows/**
+    branches:
+      - master
   pull_request:
 jobs:
   build:
