--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dev_dependencies:
   flutter_native_splash: ^2.2.0+1
   flutter_launcher_icons: ^0.9.2
   flutter_colorpicker: ^1.0.3
+  fake_cloud_firestore: ^1.2.2
+  firebase_storage_mocks: ^0.5.0
+  firebase_auth_mocks: ^0.8.4
+  google_sign_in_mocks: ^0.2.1
 flutter:
   uses-material-design: true
   assets:
