--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -8,17 +8,17 @@ jobs:
     name: flutter build
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout to repository
         uses: actions/checkout@v3
 
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java-version: '11'
+          distribution: "zulu"
+          java-version: "11"
 
-      - uses: actions/cache@v2
+      - name: Gradle Cache for faster builds
+        uses: actions/cache@v2
         with:
           path: |
             ~/.gradle/caches
@@ -30,10 +30,10 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          channel: "stable"
           cache: true
           cache-key: flutter
-          flutter-version: '3.0.1'
+          flutter-version: "3.0.1"
           cache-path: ${{ runner.tool_cache }}/flutter
 
       - name: Disable Analytics
