--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
       - .github/workflows/**
       - test/**
     branches:
-      - master
+      - "!master"
   pull_request:
 jobs:
   test:
