--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
   firebase_storage_mocks: ^0.5.0
   firebase_auth_mocks: ^0.8.4
   google_sign_in_mocks: ^0.2.1
+  mockito: ^5.2.0
 flutter:
   uses-material-design: true
   assets:
